fixed styling on ExpensesBarChart labels. Labels disappear if on mobile

--- a/src/styles/components/_graph.scss
+++ b/src/styles/components/_graph.scss
@@ -12,3 +12,11 @@
 	stroke: gray;
 	stroke-width: 0.4;
 }
+
+.rv-xy-plot__series--label {
+	display: none;
+	font-size: 1.2rem;
+	@media (min-width: $desktop-breakpoint) {
+		display: block;
+	}
+}
